_cocktails/1212_globalarch_1/manifest/us/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: us-wsi-endpoint
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: us-wsi-endpoint
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
    alb.ingress.kubernetes.io/actions.response-403: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403","messageBody":"403 error text"}}
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /v1/account
        pathType: Prefix
        backend:
          service:
            name: account
            port:
              number: 8080
      - path: /v1/event
        pathType: Prefix
        backend:
          service:
            name: event
            port:
              number: 8080
      - path: /v1/status
        pathType: Prefix
        backend:
          service:
            name: status
            port:
              number: 8080
      - path: /v1/stress
        pathType: Prefix
        backend:
          service:
            name: stress
            port:
              number: 8080
      - path: /v1/token
        pathType: Prefix
        backend:
          service:
            name: token
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: response-403
            port:
              name: use-annotation
